# geo-cli

./: README.md  conversor.py  core.py  main.py  map.py  pyproject.toml  pytest.ini  readme.sh  requirements.txt
.github/workflows/: python-package.yml
examples/: aluminocomquimbite.csv  capitais_mundo.csv  coordenadas_geo.csv  mineral.csv  municipios_utm.csv
src/: conversor.py  formula.py  main.py  map.py  maps.py  petrology.py
src/data/: elements.csv
src/geociencias_cli/: formula.py  main.py  maps.py  petrology.py
src/geociencias_cli/data/: elements.csv
src/tests/: conftest.py  test_conversor.py  test_formula.py  test_main.py  test_maps.py  test_petrology.py
tests/: __init__.py  conftest.py  test_conversor.py  test_formula.py  test_main.py  test_maps.py  test_petrology.py
