[project]
name = "geo-cli"
version = "0.1.0"
description = "toolkit de ferramentas relacionadas a geociências"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.20.0",
    "pandas>=3.0.2",
    "pyproj>=3.7.2",
    "pytest>=9.0.3",
    "rich>=15.0.0",
    "ruff>=0.15.11",
    "typer>=0.24.1",
]

[project.scripts]
geo-cli = "main:app"

[tool.setuptools.packages.find]
where = ["src"]
